--- a/Dividend/app.backup/public/index.html
+++ b/Dividend/app.backup/public/index.html
@@ -22,7 +22,14 @@
         <div id="chat">
             <h2>Quant Sheet Gen</h2>
             <hr />
-            <button id="generate">Generate</button>
+            <center>
+                <button
+                    id="generate"
+                    style="font-size : 30px;width: 50%; height: 100px;"
+                >
+                    Generate
+                </button>
+            </center>
             <hr />
         </div>
         <!-- <script src="/client.js"></script> -->
