--- a/Dividend/app.backup/public/template.html
+++ b/Dividend/app.backup/public/template.html
@@ -1,60 +1,27 @@
-html,
-* {
+*{
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
-body {
+body{
     font-family: Helvetica;
     -webkit-font-smoothing: antialiased;
-    background: rgba(90, 160, 245, 1);
+    background: rgba( 90, 160, 245, 1);
 }
-h1 {
+h2{
     text-align: center;
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 1px;
     color: white;
-    padding: 20px 0;
-}
-h2 {
-    text-align: center;
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: white;
-    padding: 20px 0;
-}
-h3 {
-    text-align: center;
-    font-size: 14px;
-    /* text-transform: uppercase; */
-    letter-spacing: 1px;
-    color: white;
-    padding: 10px 0;
-}
-h4 {
-    text-align: center;
-    font-size: 13px;
-    /* text-transform: uppercase; */
-    letter-spacing: 1px;
-    color: white;
-    padding: 10px 0;
-}
-h5 {
-    text-align: center;
-    font-size: 12px;
-    /* text-transform: uppercase; */
-    letter-spacing: 1px;
-    color: white;
-    padding: 5px 0;
+    padding: 30px 0;
 }
 
 /* Table Styles */
 
-.table-wrapper {
+.table-wrapper{
     margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
 }
 
 .fl-table {
@@ -69,8 +36,7 @@ h5 {
     background-color: white;
 }
 
-.fl-table td,
-.fl-table th {
+.fl-table td, .fl-table th {
     text-align: center;
     padding: 8px;
 }
@@ -82,8 +48,9 @@ h5 {
 
 .fl-table thead th {
     color: #ffffff;
-    background: #2f6351;
+    background: #2F6351;
 }
+
 
 .fl-table thead th:nth-child(odd) {
     color: #ffffff;
@@ -101,7 +68,7 @@ h5 {
         display: block;
         width: 100%;
     }
-    .table-wrapper:before {
+    .table-wrapper:before{
         content: "Scroll horizontally >";
         display: block;
         text-align: right;
@@ -109,12 +76,10 @@ h5 {
         color: white;
         padding: 0 0 10px;
     }
-    .fl-table thead,
-    .fl-table tbody,
-    .fl-table thead th {
+    .fl-table thead, .fl-table tbody, .fl-table thead th {
         display: block;
     }
-    .fl-table thead th:last-child {
+    .fl-table thead th:last-child{
         border-bottom: none;
     }
     .fl-table thead {
@@ -125,9 +90,8 @@ h5 {
         position: relative;
         overflow-x: auto;
     }
-    .fl-table td,
-    .fl-table th {
-        padding: 20px 0.625em 0.625em 0.625em;
+    .fl-table td, .fl-table th {
+        padding: 20px .625em .625em .625em;
         height: 60px;
         vertical-align: middle;
         box-sizing: border-box;
@@ -152,10 +116,10 @@ h5 {
     }
     .fl-table tr td:nth-child(odd) {
         background: #d8d8d8;
-        border-right: 1px solid #e6e4e4;
+        border-right: 1px solid #E6E4E4;
     }
     .fl-table tr td:nth-child(even) {
-        border-right: 1px solid #e6e4e4;
+        border-right: 1px solid #E6E4E4;
     }
     .fl-table tbody td {
         display: block;
