--- a/Dividend/app.backup/public/chat.html
+++ b/Dividend/app.backup/public/chat.html
@@ -2,51 +2,11 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Math Gen Ouput</title>
+        <title>Quant Gen Ouput</title>
         <!-- <script src="/libs/socket.io.js"></script> -->
         <!-- <link href="chatroom.css" rel="stylesheet" /> -->
-        <style type="text/css">
-            @page {
-                size: auto;
-                /* auto is the initial value */
-
-                /* this affects the margin in the printer settings */
-                margin: 15mm 5mm 5mm 5mm;
-            }
-
-            body {
-                /* this affects the margin on the content before sending to printer */
-                margin: 0px;
-            }
-
-            @media print {
-                .no-print,
-                .no-print * {
-                    display: none !important;
-                }
-            }
-
-            table {
-                table-layout: auto;
-                border-collapse: collapse;
-                page-break-inside: avoid;
-                width: 100%;
-            }
-
-            table td {
-                border: 0px solid #ccc;
-            }
-
-            table .absorbing-column {
-                width: 100%;
-            }
-
-            /*table { page-break-inside:auto }*/
-            tr {
-                page-break-inside: avoid;
-                /*page-break-after: auto*/
-            }
-        </style>
+        <!-- <style src="chatroom.css"></style> -->
+        <link href="chatroom.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -57,6 +17,7 @@
         <!-- <script type="text/javascript" id="MathJax-script" async src="libs/tex-svg.js"> -->
         <!-- </script> -->
         <script src="/libs/p5.js"></script>
+        <script src="/libs/marked.min.js"></script>
         <!-- <script src="gdu_keygen.js"></script> -->
         <script src="/client.p5.js"></script>
     </body>
